--- a/C#/BeamNGModsUpdateChecker/strings.en.resx
+++ b/C#/BeamNGModsUpdateChecker/strings.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="checkingForUpdates" xml:space="preserve">
+    <value>Checking for updates...</value>
+  </data>
   <data name="restartApp" xml:space="preserve">
     <value>The application will be restarted! Continue?</value>
   </data>
