--- a/C#/BeamNGModsUpdateChecker/frmMain.en-GB.resx
+++ b/C#/BeamNGModsUpdateChecker/frmMain.en-GB.resx
@@ -131,28 +131,43 @@
     <value>Link</value>
   </data>
   <data name="tsmiLAddThread.Size" type="System.Drawing.Size, System.Drawing">
-    <value>142, 22</value>
+    <value>156, 22</value>
   </data>
   <data name="tsmiLAddThread.Text" xml:space="preserve">
     <value>Add threads</value>
   </data>
+  <data name="toolStripMenuItem3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 6</value>
+  </data>
   <data name="tsmiMakeRead.Size" type="System.Drawing.Size, System.Drawing">
-    <value>142, 22</value>
+    <value>156, 22</value>
   </data>
   <data name="tsmiMakeRead.Text" xml:space="preserve">
     <value>Mark as read</value>
   </data>
+  <data name="tsmiMakeUnread.Size" type="System.Drawing.Size, System.Drawing">
+    <value>156, 22</value>
+  </data>
+  <data name="tsmiMakeUnread.Text" xml:space="preserve">
+    <value>Mark as unread</value>
+  </data>
   <data name="toolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>139, 6</value>
+    <value>153, 6</value>
   </data>
   <data name="tsmiRemove.Size" type="System.Drawing.Size, System.Drawing">
-    <value>142, 22</value>
+    <value>156, 22</value>
   </data>
   <data name="tsmiRemove.Text" xml:space="preserve">
     <value>Remove</value>
   </data>
   <data name="cmsThreadsMenu.Size" type="System.Drawing.Size, System.Drawing">
-    <value>143, 76</value>
+    <value>157, 104</value>
+  </data>
+  <data name="файлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>63, 20</value>
+  </data>
+  <data name="файлToolStripMenuItem.Text" xml:space="preserve">
+    <value>Threads</value>
   </data>
   <data name="tsmiAddThreads.Size" type="System.Drawing.Size, System.Drawing">
     <value>201, 22</value>
@@ -166,11 +181,11 @@
   <data name="tsmiMarkAllRead.Text" xml:space="preserve">
     <value>Mark all threads as read</value>
   </data>
-  <data name="файлToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>63, 20</value>
+  <data name="tsmiRefresh.Size" type="System.Drawing.Size, System.Drawing">
+    <value>201, 22</value>
   </data>
-  <data name="файлToolStripMenuItem.Text" xml:space="preserve">
-    <value>Threads</value>
+  <data name="tsmiRefresh.Text" xml:space="preserve">
+    <value>Check for updates</value>
   </data>
   <data name="tsmiOptions.Size" type="System.Drawing.Size, System.Drawing">
     <value>61, 20</value>
@@ -178,23 +193,8 @@
   <data name="tsmiOptions.Text" xml:space="preserve">
     <value>Options</value>
   </data>
-  <data name="tsmiExpand.Size" type="System.Drawing.Size, System.Drawing">
-    <value>114, 22</value>
-  </data>
-  <data name="tsmiExpand.Text" xml:space="preserve">
-    <value>Expand</value>
-  </data>
-  <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>111, 6</value>
-  </data>
-  <data name="tsmiExit.Size" type="System.Drawing.Size, System.Drawing">
-    <value>114, 22</value>
-  </data>
-  <data name="tsmiExit.Text" xml:space="preserve">
-    <value>Exit</value>
-  </data>
   <data name="cmsTray.Size" type="System.Drawing.Size, System.Drawing">
-    <value>115, 54</value>
+    <value>142, 82</value>
   </data>
   <data name="niTray.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -2018,6 +2018,30 @@
   </data>
   <data name="niTray.Text" xml:space="preserve">
     <value>Updates: 0</value>
+  </data>
+  <data name="tsmiExpand.Size" type="System.Drawing.Size, System.Drawing">
+    <value>141, 22</value>
+  </data>
+  <data name="tsmiExpand.Text" xml:space="preserve">
+    <value>Expand</value>
+  </data>
+  <data name="toolStripMenuItem4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>138, 6</value>
+  </data>
+  <data name="добавитьТемыToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>141, 22</value>
+  </data>
+  <data name="добавитьТемыToolStripMenuItem.Text" xml:space="preserve">
+    <value>Add threads</value>
+  </data>
+  <data name="toolStripMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>138, 6</value>
+  </data>
+  <data name="tsmiExit.Size" type="System.Drawing.Size, System.Drawing">
+    <value>141, 22</value>
+  </data>
+  <data name="tsmiExit.Text" xml:space="preserve">
+    <value>Exit</value>
   </data>
   <data name="toolStripStatusLabel1.Size" type="System.Drawing.Size, System.Drawing">
     <value>67, 17</value>
